--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ classifiers = [
 ]
 license = "MIT"
 license-files = ["LICENSE"]
+dependencies = [
+    "more-itertools>=10.7.0,<11"
+]
 
 [project.urls]
 "Homepage" = "https://github.com/petamas/python-pathext"
